--- a/index.html
+++ b/index.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>EasyDate</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
   <header>
-  <h1 class="big title"><em>EasyDate</em></h1>
-  <nav class="nav">
-  <ul>
-    <li><a href="index.html" style="color: 
-    white">Home</a></li>
-    <li><a href="reviews.html" style="color: 
-    white">Reviews</a></li>
-    <li><a href="sign_up.html" style="color: 
-    white">Sign up</a></li>
-    <li><a href="people.html" style="color: 
-    white">People</a></li>
-  </ul>
-</nav>
-</header>
+    <h1 class="big"><em>EasyDate</em></h1>
+    <nav class="nav">
+      <ul>
+        <li><a class="listItem" href="index.html">Home</a></li>
+        <li><a class="listItem" href="reviews.html">Reviews</a></li>
+        <li><a class="listItem" href="sign_up.html">Sign up</a></li>
+        <li><a class="listItem" href="people.html">People</a></li>
+      </ul>
+    </nav>
+  </header>
   <main>
     <h2>Basic information about EasyDate</h2>
-      <p style="width: 350px; background-color: slategrey; color: white; border-radius: 15px; padding: 5px;">
-        <em>
-           EasyDate originated in the year 2020. The              founder of this dating site is called Elroy            C. de Gans. This dating site was mainly                created to let people quickly get in touch             with each other free of costs.
-        </em>
-      </p>
-    <img width="330" alt="holding hands" src="images/holding_hands.jpg">
-    <img width="330" alt="romantic sunset" src="images/sundown_couple.jpg">
-    <img width="330" alt="hugging couple on traintracks" 
-    src="images/treinliefde.jpeg">
+    <section>
+      <article class="article1">
+        <img alt="holding hands" src="images/holding_hands.jpg">
+        <h3>Love for everyone</h3>
+        <p>
+          <em>
+            EasyDate originated in the year 2020. The founder of this dating site is called Elroy C. de Gans. This
+            dating
+            site was mainly created to let people quickly get in touch with each other free of costs.
+          </em>
+        </p>
+      </article>
+
+      <article class="article2">
+        <img alt="romantic sunset" src="images/sundown_couple.jpg">
+        <h3>You're our top priority</h3>
+        <p>
+          <em>
+            EasyDate is unlike other similar apps like bumble or tinder. You don't need to pay money to have more
+            privileges or to visite someones profile. You will ALWAYS be a premium member on EasyDate!
+          </em>
+        </p>
+      </article>
+
+      <article class="article3">
+        <img alt="hugging couple on traintracks" src="images/treinliefde.jpeg">
+        <h3>Spread the love</h3>
+        <p>
+          <em>
+            It's not only the goal to just let people connect with each other. We are striving for some deeper meaning.
+            We believe that our app can change the world! The more love we spread, the more peace we have.
+          </em>
+        </p>
+      </article>
+    </section>
   </main>
-  <footer class="footer ">
+  <footer class="footer">
     <span>
       <em>Copyright 2022 ECode productions</em>
     </span>
   </footer>
 </body>
+
 </html>
