--- a/people.html
+++ b/people.html
@@ -1,61 +1,61 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>people</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-   <header>
-  <h1 class="big title"><em>EasyDate</em></h1>
-  <nav class="nav">
-  <ul>
-    <li><a href="index.html" style="color: 
-    white">Home</a></li>
-    <li><a href="reviews.html" style="color: 
-    white">Reviews</a></li>
-    <li><a href="sign_up.html" style="color: 
-    white">Sign up</a></li>
-    <li><a href="people.html" style="color: 
-    white">People</a></li>
-  </ul>
-  </nav>
-    </header>
+  <header>
+    <h1 class="big"><em>EasyDate</em></h1>
+    <nav class="nav">
+      <ul>
+        <li><a class="listItem" href="index.html" >Home</a></li>
+        <li><a class="listItem" href="reviews.html">Reviews</a></li>
+        <li><a class="listItem" href="sign_up.html">Sign up</a></li>
+        <li><a class="listItem" href="people.html">People</a></li>
+      </ul>
+    </nav>
+  </header>
   <h2 style="text-align: center; margin-bottom:60px ">Profiles </h2>
   <main>
-  <div class="photoContainer">
-  <div class="item" >
-    <img class="small" src="images/ira.jpg" alt="blonde woman leaning on hand"  />
-    <h4><strong>Ira</strong></h4>
-    <p class="small"><em>I'm 20 years old and I am looking for someone I can cuddle with. </em></p>
-  </div>
-  <div class="item">
-    <img class="small" src="images/lisa.jpg" alt="brunette woman sitting on the couch"/>  
-      <h4><strong>Lisa</strong></h4>
-      <p><em>Hello guys. My name is Lisa and I got an old spirit. I 
-      like to have a serious 
-      relationship with a guy. My dream is to have 3 kids.</em></p>
-  </div>
-  <div class="item">
-    <img class="small" src="images/pic6.jpg" alt="brunette woman with glasses leaning on her hand and smiling "/>
-      <h4>Jalisa</h4>
-    <p><em>hi party boyz! I'm young, fruity and in the best 
-    state of my life! I'm a social person, love to make new friends 
-    and I like to party!</em></p>
-  </div>
-    <div class="item">
-    <img class="small" src="images/pic11.jpg" alt="Blonde woman smiling from the side"/>
-      <h4>Roxanne</h4>
-      <p><em>My name is Roxanne but my friends call me roxy. I am a 
-      shy person in general but when I feel comfy with someone I 
-      can be a funny blonde woman! lmao</em></p>
-  </div>
-    <div class="item">
-    <img class="small" src="images/pic10.jpg" alt="Woman with dark curly hair and wide smile leaning in two hands" 
-    />
-      <h4>Margo</h4>
-      <p><em>Hi beautiful people! My name is Margo and I am enjoying life to the fullest. I love traveling around the world and try out new food in different places. I am looking for a man or woman who wants to share this passion with me. Maybe I am looking for you?</em></p>
-  </div>
-  </div>
+    <div class="photoContainer">
+      <div class="item">
+        <img class="small" src="images/ira.jpg" alt="blonde woman leaning on hand" />
+        <h4><strong>Ira</strong></h4>
+        <p class="small"><em>I'm 20 years old and I am looking for someone I can cuddle with. </em></p>
+      </div>
+      <div class="item">
+        <img class="small" src="images/lisa.jpg" alt="brunette woman sitting on the couch" />
+        <h4><strong>Lisa</strong></h4>
+        <p><em>Hello guys. My name is Lisa and I got an old spirit. I
+            like to have a serious
+            relationship with a guy. My dream is to have 3 kids.</em></p>
+      </div>
+      <div class="item">
+        <img class="small" src="images/pic6.jpg" alt="brunette woman with glasses leaning on her hand and smiling " />
+        <h4>Jalisa</h4>
+        <p><em>hi party boyz! I'm young, fruity and in the best
+            state of my life! I'm a social person, love to make new friends
+            and I like to party!</em></p>
+      </div>
+      <div class="item">
+        <img class="small" src="images/pic11.jpg" alt="Blonde woman smiling from the side" />
+        <h4>Roxanne</h4>
+        <p><em>My name is Roxanne but my friends call me roxy. I am a
+            shy person in general but when I feel comfy with someone I
+            can be a funny blonde woman! lmao</em></p>
+      </div>
+      <div class="item">
+        <img class="small" src="images/pic10.jpg"
+          alt="Woman with dark curly hair and wide smile leaning in two hands" />
+        <h4>Margo</h4>
+        <p><em>Hi beautiful people! My name is Margo and I am enjoying life to the fullest. I love traveling around the
+            world and try out new food in different places. I am looking for a man or woman who wants to share this
+            passion with me. Maybe I am looking for you?</em></p>
+      </div>
+    </div>
   </main>
   <footer class="footer">
     <span>
@@ -63,4 +63,5 @@
     </span>
   </footer>
 </body>
+
 </html>
