ttest commit en push

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a class="listItem" href="index.html">Home</a></li>
         <li><a class="listItem" href="reviews.html">Reviews</a></li>
         <li><a class="listItem" href="sign_up.html">Sign up</a></li>
-        <li><a class="listItem" href="people.html">People</a></li>
+        <li><a class="listItem" href="people.html">People iet veranderd</a></li>
       </ul>
     </nav>
   </header>
